[package]
name = "fast_fractal"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.3.16"
triangulate = { path = "../triangulate" }
egui-macroquad = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
glam = { version = "0.14.0", default-features = false, features = ["serde"] }
base64 = "0.13.0"
serde_json = "1.0.82"
lz4_flex = { version = "0.9.3", default-features = false, features = ["checked-decode"] }
